--- a/style.css
+++ b/style.css
@@ -21,35 +21,44 @@
   --a-hover: ;
 }
 
-.header--div--fund {
-	display: block;
-	text-align: center;
-	font-size: 30px;
+/*header--div--fund--parent {
+	display: flex;
+	min-height: 100vh;
+    margin: 0;
+}*/
 
+.header--div--fund {
+	text-align: center;
+	font-size: 2em;
 }
 
 /* layout */
-.banner .row {
+.banner {
 	/*display: none;*/
 	font-size: 2em;
 	justify-content: center;
 }
 
 /* base styling */ 
-.entry-content h3 {
+/*.entry-content h3 {
 line-height: inherit;
 color: black;
-
+}*/
 /* components */
-a.btn {
+/*btn {
  color: var(--main-bg-color);
- /* background-color: var(--main-bg-color); */
  background-color-opacity: 0.04;
  border-radius: 4px;
  border-color: darken(blue); 
-}
+}*/
+
 
 .main-navigation a {
 	color: var(--main-bg-color);
 }
 
+/* inherits from h3 header */
+.feature-time-date-block {
+font-size: 1.75rem; 
+margin-bottom: 0.375rem;
+}
