--- a/style.css
+++ b/style.css
@@ -65,11 +65,11 @@ margin-bottom: 0.375rem;
 }
 
 
-.call-out__ {
+.call-out__not-quite {
 	border-color: black;
 	border-style: solid;
-	border-width: 1em;
-	padding: 2em;
+	border-width: 0.25em;
+	padding: 1em;
 }
 
 #mc-embedded-subscribe {
