--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
- Theme Name:   Roland - JHFF theme example 1 
+ Theme Name:   Roland - JHFF theme 
  Theme URI:    http://example.com
  Description:  Child theme of Quark
  Author:       Will Skora
  Author URI:   http://example.com
  Template:     Quark
- Version:      1.0.0
+ Version:      1.1.1
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
@@ -19,6 +19,11 @@
   --main-bg-light-opacity: ;
   --a-visited: #FF0600;
   --a-hover: ;
+  --secondary-sky-blue: #d1eaff85; 
+}
+
+html {
+font-size: 14px; 
 }
 
 /*header--div--fund--parent {
@@ -48,8 +53,7 @@ color: black;
 .btn {
  background-color: var(--main-bg-color);
  color: #FFFFFF;
- background-color-opacity: 0.04;
- border-radius: 4px;
+ border-radius: .25em;
  border-color: darken(blue); 
 }
 
@@ -73,10 +77,16 @@ margin-bottom: 0.375rem;
 }
 
 #mc-embedded-subscribe {
- background-color: var(--main-bg-color); !important
+ background-color: var(--main-bg-color);
  color: #FFFFFF;
- background-color-opacity: 0.04;
  border-radius: 4px;
  border-color: darken(blue); 
 }
 
+
+.wp-block-pb-accordion-item {
+  margin: 1.5em;
+  border-color: #7da5ff;
+  border-style: solid;
+  border-width: .65em;
+}
