--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
 :root {
   --main-bg-color: #003ECB;
   --main-bg-light-opacity: ;
-  --a-visited: #FF0600;
   --a-hover: ;
   --secondary-sky-blue: #d1eaff85; 
 }
@@ -62,6 +61,12 @@ color: black;
 	color: var(--main-bg-color);
 }
 
+/* overwrite quark */
+/* a:visited {
+	color: var(--wp--preset--color--secondary-white);
+
+} */
+
 /* inherits from h3 header */
 .feature-time-date-block {
 font-size: 1.75rem; 
@@ -89,4 +94,20 @@ margin-bottom: 0.375rem;
   border-color: #7da5ff;
   border-style: solid;
   border-width: .65em;
+}
+
+
+.wp-block-button.is-style-the-jhff-style.wp-block-button__link,
+.is-style-the-jhff-style .wp-block-button__link {
+  background-color: var(--wp--preset--color--primary-blue);
+  color: var(--wp--preset--color--secondary-white);
+  text-align: center;
+  overflow-wrap: break-word; 
+}
+  .wp-block-button.is-style-the-jhff-style.wp-block-button__link:hover, .wp-block-button.is-style-the-jhff-style.wp-block-button__link:focus, .wp-block-button.is-style-the-jhff-style.wp-block-button__link:active, .wp-block-button.is-style-the-jhff-style.wp-block-button__link:visited,
+  .is-style-the-jhff-style .wp-block-button__link:hover,
+  .is-style-the-jhff-style .wp-block-button__link:focus,
+  .is-style-the-jhff-style .wp-block-button__link:active {
+   
+    text-decoration: underline; 
 }
